# fastapi-tutorial

./: .gitignore  pyproject.toml
fastAPI_tutorial/: main.py
fastAPI_tutorial/tutorial-user_guide/: CORS_cross_origin_resource_sharing.py  background_tasks.py  bigger_applications_multiple_files.py  debugging.py  dependencies.py  intro_to_body_updates.py  main.py  metadata_and_docs_urls.py  middleware.py  security.py  sql_relational_databases.py  static_files.py  testing.py
fastAPI_tutorial/tutorial-user_guide/app/: main.py
fastAPI_tutorial/tutorial-user_guide/app/routers/: items.py  users.py
fastAPI_tutorial/tutorial-user_guide/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
fastAPI_tutorial/tutorial-user_guide/testing/: main.py  main_b.py  test_main.py  test_main_b.py
