[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["Teo Zosa <teofilo@sonosim.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# "Intro" - "Header Parameters"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"

# "Response model"
#email-validator = "^1.1.1"
pydantic = {extras = ["email"], version = "^1.6.1"}

# "Form Data" - "Request Files" - "Request Forms and Files", "Security - First Steps"
python-multipart = "^0.0.5"

# "Dependencies with yield"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"

# "OAuth2 with Password (and hashing), Bearer with JWT tokens"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}


[tool.poetry.dev-dependencies]
pylint = "^2.6.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
